2014-05-07  Julien Bect  <julien.bect@supelec.fr>

	Avoid changing the current dir to make a function available.

	* misc/test/stk_runtests.m: Avoid changing the current dir to make
	stk_config_path available. Use addpath/rmpath instead.

2014-05-06  Julien Bect  <julien.bect@supelec.fr>

	stk_config_path: Fix a private folder problem in Octave 3.2.x

	* config/stk_config_path.m: Fix a private folder problem in Octave
	3.2.x (a new private folder has been recently created).

	Use horzcat instead of [,].

	* lm/@stk_lm_affine/feval.m: modified
	* lm/@stk_lm_cubic/feval.m: modified
	* lm/@stk_lm_quadratic/feval.m: modified

	Change the way the MOLE is installed.

	* config/stk_config_mole.m: New function, that takes the place of
	misc/mole/init.m and misc/mole/install_mole_function.m.
	* misc/mole/init.m: removed
	* misc/mole/install_mole_function.m: removed
	* config/stk_config_addpath.m: Modified, to call stk_config_mole,
	thus avoiding the use of "run" which seems to be causing problems
	in Octave 3.2.x.
	* etc/octave-pkg/post_install.m: idem
	* stk_init.m: idem

2014-04-15  Julien Bect  <julien.bect@supelec.fr>

	Add an INDEX file to the Octave package.

	* etc/octave-pkg/INDEX: INDEX file for the Octave package
	* etc/octave-pkg/pkg_install_stk_and_generate_doc.m: new script to
	test quickly that the tarball can be installed and to inspect how
	the corresponding Octave-forge documentation will look.
	* admin/make_octave_package: copy INDEX to the package.

	Don't include stk_optim_hasfmincon in the Octave package.

	* admin/make_octave_package.m: modified

	Some functions are not part of the public API.

	* core/ortho_func.m: modified (doc)
	* core/stk_cholcov.m: modified (doc)
	* core/@stk_kreq_qr/get.m: modified (doc)
	* core/@stk_kreq_qr/isequal.m: modified (doc)
	* core/@stk_kreq_qr/linsolve.m: modified (doc)
	* core/@stk_kreq_qr/stk_kreq_qr.m: modified (doc)
	* core/@stk_kreq_qr/stk_set_righthandside.m: modified (doc)